--- a/src/index.html
+++ b/src/index.html
@@ -330,6 +330,55 @@
 
         </section>
 
+        <section class="section-booking">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+
+                            <div class="u-mb-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now!
+                                </h2>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full Name" id="name" required maxlength="50">
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email" id="email" required maxlength="50">
+                                <label for="email" class="form__label">Email</label>
+                            </div>
+
+                            <div class="form__group u-mb-medium">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="small" name="size" maxlength="50">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-btn"></span>
+                                        Small tour group
+                                    </label>
+                                </div>
+
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="large" name="size" maxlength="50">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-btn"></span>
+                                        Large tour group
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <button class="btn btn--dark">NEXT STEP &rarr;</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
     </main>
