--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             </h1>
 
             <div class="btn-box">
-                <a href="#" class="btn btn--white btn--animated">Discover the legacy</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover the legacy</a>
             </div>
         </div>
     </header>
@@ -134,7 +134,7 @@
 
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
 
             <div class="u-center-text u-mb-big">
                 <h2 class="heading-secondary">
@@ -176,7 +176,7 @@
 
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
 
                             </div>
                             
@@ -216,7 +216,7 @@
 
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
 
                             </div>
 
@@ -256,7 +256,7 @@
 
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
 
                             </div>
 
@@ -426,6 +426,24 @@
         </div>
 
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/greek8.jpg" alt="8" class="popup__img">
+                <img src="img/greek9.png" alt="9" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary u-mb-small">Start booking now!</h2>
+                <h3 class="heading-tertiary u-mb-small">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, expedita illo laudantium molestias natus odit optio qui. Deserunt dolor earum facilis fugit harum, illo modi quidem quisquam repudiandae sint voluptatem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at cumque dignissimos error, est in magnam nemo numquam placeat quaerat voluptas voluptatibus. Ad aspernatur consectetur fuga nemo quaerat quasi sequi? 
+                </p>
+                <a href="#" class="btn btn--dark">book now</a>
+            </div>
+        </div>
+    </div>
 
 <!--    <section class="grid-test">-->
 
