--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
 
                                     <p class="card__price-only">Only</p>
 
-                                    <p class="card__price-value u-mb-big">$297</p>
+                                    <p class="card__price-value">$297</p>
 
                                 </div>
 
@@ -212,7 +212,7 @@
 
                                     <p class="card__price-only">Only</p>
 
-                                    <p class="card__price-value u-mb-big">$497</p>
+                                    <p class="card__price-value">$497</p>
 
                                 </div>
 
@@ -252,7 +252,7 @@
 
                                     <p class="card__price-only">Only</p>
 
-                                    <p class="card__price-value u-mb-big">$897</p>
+                                    <p class="card__price-value">$897</p>
 
                                 </div>
 
