some popup fixes

--- a/src/index.html
+++ b/src/index.html
@@ -430,8 +430,8 @@
     <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
-                <img src="img/greek8.jpg" alt="8" class="popup__img">
-                <img src="img/greek9.png" alt="9" class="popup__img">
+                <img src="img/greek8.jpg" alt="8" class="popup__img popup__img--1">
+                <img src="img/greek9.png" alt="9" class="popup__img popup__img--2">
             </div>
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">&times;</a>
