responsive image footer

--- a/src/index.html
+++ b/src/index.html
@@ -403,7 +403,13 @@
     <footer class="footer">
 
         <div class="footer__logo-box u-mb-big">
-            <img src="img/logo-white.png" alt="logo" class="footer__logo">
+            <picture class="footer__logo">
+
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="logo" class="footer__logo">
+
+            </picture>
         </div>
 
         <div class="row">
