--- a/src/index.html
+++ b/src/index.html
@@ -405,9 +405,15 @@
         <div class="footer__logo-box u-mb-big">
             <picture class="footer__logo">
 
-                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                        media="(max-width: 37.5em)"
+                >
 
-                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="logo" class="footer__logo">
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+                     alt="logo"
+                     class="footer__logo"
+                     src="img/logo-green-2x.png"
+                >
 
             </picture>
         </div>
