--- a/src/index.html
+++ b/src/index.html
@@ -432,7 +432,7 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Lorem ipsum dolor sit amet, <a href="#" class="footer__link">genius</a> adipisicing elit. Ab adipisci architecto commodi delectus dolores eius, ipsa molestias natus, neque officiis placeat porro qui quod similique suscipit velit vitae voluptatum! Totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at cumque dicta explicabo in ipsa iste labore laborum natus, nesciunt nisi officiis pariatur quo recusandae similique sunt temporibus ullam voluptas!
+                    Lorem ipsum dolor sit amet, <a href="#" class="footer__link">el19ht</a> adipisicing elit. Ab adipisci architecto commodi delectus dolores eius, ipsa molestias natus, neque officiis placeat porro qui quod similique suscipit velit vitae voluptatum! Totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto at cumque dicta explicabo in ipsa iste labore laborum natus, nesciunt nisi officiis pariatur quo recusandae similique sunt temporibus ullam voluptas!
                 </p>
             </div>
         </div>
